--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,8 +42,10 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-database-ktx:20.0.3'
     implementation platform('com.google.firebase:firebase-bom:31.1.0')
     implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-auth:21.1.0'
     def room_version = "2.4.3"
 
     implementation "androidx.room:room-runtime:$room_version"
