--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,10 @@ android {
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.1.0')
     implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
     def room_version = "2.4.3"
 
+    implementation 'com.mapbox.maps:android:10.10.0'
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
