--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+
     <application
             android:allowBackup="true"
             android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,7 +17,15 @@
             android:theme="@style/Theme.MiniProject1"
             tools:targetApi="31">
 
+
         <receiver android:name=".EditProductBroadcastReceiver"
+                android:enabled="true"
+                android:exported="true">
+            <intent-filter>
+                <action android:name="com.pkg.perform.Ruby" />
+            </intent-filter>
+        </receiver>
+        <receiver android:name=".GeoReceiver"
                 android:enabled="true"
                 android:exported="true">
             <intent-filter>
@@ -22,6 +34,20 @@
         </receiver>
         <activity
                 android:name=".ShoppingListsActivity"
+                android:exported="false">
+            <meta-data
+                    android:name="android.app.lib_name"
+                    android:value="" />
+        </activity>
+        <activity
+                android:name=".StoreAddActivity"
+                android:exported="false">
+            <meta-data
+                    android:name="android.app.lib_name"
+                    android:value="" />
+        </activity>
+        <activity
+                android:name=".StoreMapActivity"
                 android:exported="false">
             <meta-data
                     android:name="android.app.lib_name"
